--- a/css/blog.css
+++ b/css/blog.css
@@ -136,7 +136,7 @@ form{
 	border-left: 5px solid #DFC6E6;
 	padding-left:20px;
 }
-.sort-wrap a:hover, a:active{ border-left: 5px solid #522A5c; }
+.sort-wrap a:hover { border-left: 5px solid #522A5c; }
 
 /*日历*/
 .calendar{
