--- a/css/blog.css
+++ b/css/blog.css
@@ -23,6 +23,7 @@
 	margin-bottom: 10px;
 	padding: 15px 20px;
 	position: relative;
+	font-family: arial;
 }
 .blog h3{
 	margin:5px 0;
@@ -38,7 +39,16 @@
 }
 .blog p{
 	text-indent: 2em;
-	line-height: 1.7;
+	line-height: 2.0;
+}
+.blog a{
+	color: #999;
+	font-size: 14px;
+	display: block;
+	margin-top: 10px;
+	margin-left: 30px;
+	text-decoration: underline;
+	font-style: italic;
 }
 .edit-info{
 	height: 20px;
